--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
+    "posthog-js": "^1.175.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-number-format": "^5.4.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "useflytrap": "^0.9.10",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
